# vinylpi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.pi.yml  docker-compose.yml  makefile
api/src/api/: main.py  ws.py
api/src/api/spotify/: __init__.py  client.py
backend/: pyproject.toml
backend/src/api/: main.py
backend/src/api/spotify/: client.py
buttons/: __main__.py  buttons.py
frontend/: package.json
frontend/src/: App.tsx  environment.d.ts
frontend/src/player/: Login.tsx  Player.tsx  WebPlayer.tsx
mockreader/: pyproject.toml  uris.json
mockreader/src/app/: __main__.py  read.py  write.py
power/: __main__.py  power.py
reader/: __main__.py  reader.py  requirements.txt  writer.py
startup/autostart/: vinylpi.desktop
startup/systemd/: README.md  vinlypi-rfid.service  vinylpi-buttons.service  vinylpi-power.service  vinylpi.service
web/: .env  package-lock.json  package.json
web/public/: index.html
web/src/: App.tsx  environment.d.ts  index.css  index.tsx
web/src/player/: Controls.tsx  Display.tsx  Login.tsx  Playback.tsx  Player.tsx  Reader.tsx  WebPlayer.tsx  types.ts
